<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FileManipulator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_there">Hello there!</string>
    <string name="something">Put something in here&#8230;</string>
    <string name="read">Read</string>
    <string name="append">Append</string>
    <string name="replace">Replace</string>

</resources>
