<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <EditText
        android:id="@+id/something"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/something" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
        	android:id="@+id/read"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/read"
        	android:onClick="ReadFile" />
    
    	<Button
        	android:id="@+id/append"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/append"
        	android:onClick="AppendFile" />
    
    	<Button
        	android:id="@+id/replace"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/replace"
        	android:onClick="WriteFile" />
    </LinearLayout>
    
    
    <TextView
        android:id="@+id/hello_there"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_there" />
    
</LinearLayout>
